# matplotlib-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  matplotlibcpp.h  matplotlibcppConfig.cmake.in
examples/: CMakeLists.txt  animation.cpp  bar.cpp  basic.cpp  fill.cpp  fill_inbetween.cpp  minimal.cpp  modern.cpp  nonblock.cpp  quiver.cpp  subplot.cpp  surface.cpp  types.cpp  update.cpp  xkcd.cpp
include/: matplotlibcpp.h
